.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Finagle's user's guide.

Note that ``RB_ID=#`` correspond to associated messages in commits.

6.x
-----

Deprecations
~~~~~~~~~~~~
  * finagle-http: Deprecate channelBufferUsageTracker in favor of maxRequestSize.
    ``RB_ID=831233``

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle: Builds are now only for Java 8 and Scala 2.11. See the
    `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
    for details. ``RB_ID=828898``

  * finagle: Finagle is no longer depending on Twitter's clone of JSR166e, JDK 8
    API is used instead. ``RB_ID=833652``

  * finagle-cacheresolver: package contents merged into finagle-memcached.
    ``RB_ID=833602``

  * finagle-core: Renamed DeadlineFilter to DeadlineStatsFilter, which now only
    records stats for the number of requests with exceeded deadlines, the
    remaining deadline budget, and the transit latency of requests. It no longer
    rejects requests and has no configuration. We have decided not to pursue
    Deadline Admission Control at this time. ``RB_ID=829372``

  * finagle-core: `ClientBuilder.socksProxy(SocketAddress)` is removed.
    Use command line flags (see `c.t.f.socks.SocksProxyFlags.scala`) instead.
    ``RB_ID=834634``

  * finagle-core: Removed "closechans" and "closed" counters from `ChannelStatsHandler`.
    ``RB_ID=835194``

  * finagle-core: `c.t.finagle.NoStacktrace` is removed. Use `scala.util.control.NoStackTrace`
    instead. ``RB_ID=833188``

  * finagle-core: `c.t.finagle.Failure.withStackTrace` is removed. Use system property
    `scala.control.noTraceSuppression` instead to fill stacktraces in Finagle's failures.
    ``RB_ID=833188``

  * finagle-core: Removed the "load" gauge from `StatsFilter` as it was duplicated
    by the "pending" gauge. ``RB_ID=835199``
